Target language changes in flutter code

--- a/projects/nokhwook/web/index.html
+++ b/projects/nokhwook/web/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <!--
     If you are serving your web app in a path other than the root, change the
@@ -27,7 +28,7 @@
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="favicon.png"/>
+  <link rel="icon" type="image/png" href="favicon.png" />
 
   <title>nokhwook</title>
   <link rel="manifest" href="manifest.json">
@@ -39,7 +40,11 @@
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
 </head>
+
 <body>
+  <script src="flutter_bootstrap.js" async></script>
+</body>
+<!-- <body>
   <script>
     window.addEventListener('load', function(ev) {
       // Download main.dart.js
@@ -54,5 +59,6 @@
       });
     });
   </script>
-</body>
+</body> -->
+
 </html>
